kubernetes_deployment/components/secure_geoserver/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: secure-geoserver
spec:
  replicas: 1
  updateStrategy:
    type: OnDelete
  selector:
    matchLabels:
      app: secure-geoserver
  serviceName: secure-geoserver
  template:
    metadata:
      labels:
        app: secure-geoserver
    spec:
      containers:
      - name: geoserver
        # Source: https://docker.osgeo.org/service/rest/repository/browse/geoserver-docker/v2/geoserver/tags/
        image: docker.osgeo.org/geoserver:3.0.1
        imagePullPolicy: "IfNotPresent"
        stdin: true
        resources:
          requests:
            cpu: 1000m
            memory: 2500M
            # planned update
            # cpu: 10
            # memory: 1900M
          limits:
            cpu: 3000m
            memory: 6G
            # geoserver is started with -Xmx=4G (max heap size) and we need space for non-heap stuff
            # planned update
            # cpu: 1000m
            # memory: 5G
        volumeMounts:
          - name: storage
            mountPath: /opt/geoserver_data
            subPath: geoserver_data
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 75Gi
        # MUST STAY SSD, because network based storage kills geoserver performance
        storageClassName: ssd
