kubernetes_deployment/components/secure_geoserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: secure-geoserver
  name: secure-geoserver
spec:
  ports:
  - name: "http"
    port: 8080
    targetPort: 8080
  selector:
    app: secure-geoserver
