kubernetes_deployment/components/secure_geoserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-geoserver
  namespace: <my-namespace>
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - <my-host>
    secretName: <my-tls-secret-name>
  rules:
  - host: <my-host>
    http:
      paths:
      - path: /secure/geoserver/
        pathType: Prefix
        backend:
          service:
            name: secure-geoserver
            port:
              number: 8080
